update code after backporting from 9.0